dropdown config id

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -51,6 +51,16 @@
     <br>
     <div class="scanform"></div>
         <form action="/sendScan" method="POST">
+            <h3>Select your type of scan</h3>
+            <br>
+            <select name="conf" id="conf">
+                <option value="daba56c8-73ec-11df-a475-002264764cea">Full and Fast</option>
+                <option value="698f691e-7489-11df-9d8c-002264764cea">Full and Fast Ultimate</option>
+                <option value="708f25c4-7489-11df-8094-002264764cea">Full and very Deep</option>
+                <option value="74db13d6-7489-11df-91b9-002264764cea">Full and very Deep Ultimate</option>
+            </select>
+            <br>
+            <br>
             <h3>Give your scan a devicename:</h3>
             <input type="text" name="inputName" id="inputName" placeholder="type your name here">
             <br>
