reports pagina toegevoegd (geen backend)

--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -6,4 +6,6 @@
 
 {% block body %}
 <h1>Success, your scan has started</h1>
-{% endblock %}
+<form action="/reports" method="POST">
+    <button type="submit">Click here to go to your reports</button>
+</form>
