--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -70,5 +70,8 @@
             <button type="submit" class="btnSendScan" id="btnSendScan">send scan</button>
         </form>
     </div>
+    <form action="/reports" method="POST">
+        <button type="submit">Click here to go to your reports</button>
+    </form>
 
 {% endblock %}
