--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -9,3 +9,4 @@
 <form action="/reports" method="POST">
     <button type="submit">Click here to go to your reports</button>
 </form>
+{% endblock %}
