--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 <script type="text/python" src="../app.py"></script>
 <!-- <script type=text/javascript>
     $(function() {
