--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -22,6 +22,20 @@ crossorigin="anonymous"></script>
 
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">OpenVas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="#">Scan device</a>
+            <a class="nav-link" href="#">Confgiuration</a>
+            <a class="nav-link" href="#">Reports</a>
+           
+          </div>
+        </div>
+      </nav>
     {% block body %}{% endblock %}
 
 </body>
