--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block nav %}
-<a class="nav-link " href="/scan">Scan device</a>
+<a class="nav-link " href="/createScan">Scan device</a>
 <a class="nav-link active" href="/configuration">Confgiuration</a>
 <a class="nav-link" href="/reports">Reports</a>
 {% endblock %}
