--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block nav %}
-<a class="nav-link active" href="/scan">Scan device</a>
+<a class="nav-link active" href="/createScan">Scan device</a>
 <a class="nav-link" href="/configuration">Confgiuration</a>
 <a class="nav-link" href="/reports">Reports</a>
 {% endblock %}
