--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'questions.html' %}
 
 {% block nav %}
 <a class="nav-link " href="/createScan">Scan device</a>
