questions option button on success

--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -10,6 +10,11 @@
 <h1>Success, your scan has started</h1>
 
 <form action="/reports" method="POST">
-    <button type="submit" class="btnSendScan btn btn-primary">Click here to go to your reports</button>
+    <button type="submit" class="btnOpenReport btn btn-primary">Click here to go to your reports</button>
+</form>
+<br>
+<br>
+<form action="/portQuestions" method="POST">
+    <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer our port questions to improve security!</button>
 </form>
 {% endblock %}
