--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -8,7 +8,16 @@
 
 {% block body %}
 <h1>Success, your scan has started</h1>
+<br>
+<h3>Progress:</h3>
+<br>
+<br>
 
+
+<br>
+<br>
+<br>
+<br>
 <form action="/reports" method="POST">
     <button type="submit" class="btnOpenReport btn btn-primary">Click here to go to your reports</button>
 </form>
