--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -12,7 +12,7 @@
 <h3>Progress:</h3>
 <br>
 <br>
-<div class="progress" role="progressbar" tabindex="0" aria-valuenow={{i}} aria-valuemin="0" aria-valuetext="{{i}} percent" aria-valuemax="100">
+<div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progrb}} aria-valuemin="0" aria-valuetext="{{progrb}} percent" aria-valuemax="100">
     <div class="progress-meter" style="width: 50%"></div>
 </div>
 <br>
