new tab on btn click (success page)

--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -19,12 +19,12 @@
 <br>
 <br>
 <br>
-<form action="/reports" method="POST">
+<form action="/reports" method="POST" target="_blank">
     <button type="submit" class="btnOpenReport btn btn-primary">Click here to go to your reports</button>
 </form>
 <br>
 <br>
-<form action="/portQuestions" method="POST">
+<form action="/portQuestions" method="POST" target="_blank">
     <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer our port questions to improve security!</button>
 </form>
 {% endblock %}
