--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -25,6 +25,7 @@
 <br>
 <br>
 <form action="/portQuestions" method="POST">
+    <input type="hidden" value="{{targetname}}" name="targetname">
     <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer our port questions to improve security!</button>
 </form>
 {% endblock %}
