--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -24,7 +24,7 @@
 </form>
 <br>
 <br>
-<form action="/portQuestions" method="POST">
+<form action="/portQuestions" method="POST" target="_blank">
     <input type="hidden" value="{{targetname}}" name="targetname">
     <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer our port questions to improve security!</button>
 </form>
