--- a/flask/templates/questions.html
+++ b/flask/templates/questions.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 <div class="row">
-    <h1>Questions</h1>
+    <h1>Questions about {{targetname}}</h1>
 </div>
 <br>
 <div class="row">
