--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -34,6 +34,6 @@
 <br>
 <form action="/portQuestions" method="POST" target="_blank">
     <input type="hidden" value="{{targetname}}" name="targetname">
-    <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer our port questions to improve security!</button>
+    <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer the port questions to improve the security of target {{targetname}}!</button>
 </form>
 {% endblock %}
