progbar with yield attempt (failed)

--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -1,4 +1,6 @@
-{% extends 'questions.html' %}
+{% extends 'base.html' %}
+
+<script type="text/python" src="../../scan.py"></script>
 
 {% block nav %}
 <a class="nav-link " href="/createScan">Scan device</a>
