--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <script type="text/python" src="../app.py"></script>
+<script type="text/python" src="../scan.py"></script>
 {% endblock %}
 
 {% block nav %}
@@ -16,6 +17,9 @@
 <h3>Progress:</h3>
 <br>
 <br>
+<script>
+
+</script>
 <div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progr}} aria-valuemin="0" aria-valuetext="{{progr}} percent" aria-valuemax="100">
     <div class="progress-meter" style="width: 50%"></div>
 </div>
