--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <script type="text/python" src="../app.py"></script>
-<script type="text/python" src="../scan.py"></script>
+<script type="text/javascript" src="../progress.js"></script>
 {% endblock %}
 
 {% block nav %}
@@ -17,12 +17,11 @@
 <h3>Progress:</h3>
 <br>
 <br>
-<script>
-
-</script>
-<div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progr}} aria-valuemin="0" aria-valuetext="{{progr}} percent" aria-valuemax="100">
-    <div class="progress-meter" style="width: 50%"></div>
+<div id=progrss>
 </div>
+<!-- <div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progr}} aria-valuemin="0" aria-valuetext="{{progr}} percent" aria-valuemax="100">
+    <div class="progress-meter" style="width: 50%"></div>
+</div> -->
 <br>
 <br>
 <br>
