--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -2,7 +2,9 @@
 
 {% block head %}
 <script type="text/python" src="../app.py"></script>
-<script type="text/javascript" src="../progress.js"></script>
+<!-- <script type="text/javascript" src="js/progress.js"></script> -->
+<script type="text/javascript" src="static/css_image/progress.js"></script>
+
 {% endblock %}
 
 {% block nav %}
@@ -18,6 +20,7 @@
 <br>
 <br>
 <div id=progrss>
+    <!-- <h3>{{progr}}</h3> -->
 </div>
 <!-- <div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progr}} aria-valuemin="0" aria-valuetext="{{progr}} percent" aria-valuemax="100">
     <div class="progress-meter" style="width: 50%"></div>
