js is not reading the response, response is there

--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -4,7 +4,6 @@
 <script type="text/python" src="../app.py"></script>
 <!-- <script type="text/javascript" src="js/progress.js"></script> -->
 <script type="text/javascript" src="static/css_image/progress.js"></script>
-
 {% endblock %}
 
 {% block nav %}
@@ -19,9 +18,7 @@
 <h3>Progress:</h3>
 <br>
 <br>
-<div id=progrss>
-    <h3>0%</h3>
-</div>
+<h3 id=progrss>0%</h3>
 <!-- <div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progr}} aria-valuemin="0" aria-valuetext="{{progr}} percent" aria-valuemax="100">
     <div class="progress-meter" style="width: 50%"></div>
 </div> -->
