--- a/flask/templates/reports.html
+++ b/flask/templates/reports.html
@@ -11,33 +11,133 @@
 {% endblock %}
 
 {% block body %}
-<h1>reports</h1>
-<table>
-    <tr>
-        <th>Select</th>
-        <th>TaskName</th>
-        <th>report format</th>
-        <th>Download</th>
-    </tr>
-    {% for task in tasks %}
-        <tr>
-            <form action="/downloadreport" method=POST>
-                <input type="hidden" name="report_id" value="{{task.report_id}}">
-                <td><input type="checkbox" id="select"></td>
-                <td>{{task.task_name}}</td>
-                <td>
-                    <select name="format">
-                        <option  selected>Please choose</option>
-                        {% for k, v in reports.items() %}
-                            <option value="{{k}}">{{v}}</option>
-                        {% endfor%}
-                    </select>
-                </td>
-                <td><input type="submit" value="Download"></td>
-            </form>
-        </tr>
-    {% endfor %}
-</table>
-    
+<div class="row">
+    <h1>Reports</h1>
+</div>
+<br>
+<div class="row">
+    <div class="column">
+        <input type="text" id="myInput" onkeyup="searchTaskName()" placeholder="Search for report.."
+            class="form-control">
+    </div>
+</div>
+<br>
+<div class="row">
+
+    <div class="table-responsive">
+        <table class="table table-hover" id="reportTable">
+            <thead class="thead-dark table-bordered">
+                <tr>
+                    <th>Select</th>
+                    <th onclick="sortTable(1)">Taskname
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down-up float-right"
+                            fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
+                        </svg>
+                    </th>
+                    <th colspan="2">Report format</th>
+                    
+                </tr>
+            </thead>
+            {% for task in tasks %}
+            <tr>
+                <form action="/downloadreport" method=POST>
+                    <input type="hidden" name="report_id" value="{{task.report_id}}">
+                    <td><input type="checkbox" id="select"></td>
+                    <td>{{task.task_name}}</td>
+                    <td>
+                        <div class="dropdown">
+                            <select name="format" class="btn btn-sm btn-secondary dropdown-toggle">
+                                <!-- <option selected>Please choose</option> -->
+                                {% for k, v in reports.items() %}
+                                <option value="{{k}}">{{v}}</option>
+                                {% endfor%}
+                            </select>
+                        </div>
+
+                    </td>
+                    <td><input class="btn btn-outline-primary" type="submit" value="Download"></td>
+                </form>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+<script>
+    //Search function to filter 2 colmunn
+    function searchTaskName() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("reportTable");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+            td = tr[i].getElementsByTagName("td")[1];
+            if (td) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    tr[i].style.display = "";
+                } else {
+                    tr[i].style.display = "none";
+                }
+            }
+        }
+    }
+    //function to order column
+    function sortTable(n) {
+        var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+        table = document.getElementById("reportTable");
+        switching = true;
+        // Set the sorting direction to ascending:
+        dir = "asc";
+        /* Make a loop that will continue until
+        no switching has been done: */
+        while (switching) {
+            // Start by saying: no switching is done:
+            switching = false;
+            rows = table.rows;
+            /* Loop through all table rows (except the
+            first, which contains table headers): */
+            for (i = 1; i < (rows.length - 1); i++) {
+                // Start by saying there should be no switching:
+                shouldSwitch = false;
+                /* Get the two elements you want to compare,
+                one from current row and one from the next: */
+                x = rows[i].getElementsByTagName("TD")[n];
+                y = rows[i + 1].getElementsByTagName("TD")[n];
+                /* Check if the two rows should switch place,
+                based on the direction, asc or desc: */
+                if (dir == "asc") {
+                    if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                        // If so, mark as a switch and break the loop:
+                        shouldSwitch = true;
+                        break;
+                    }
+                } else if (dir == "desc") {
+                    if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+                        // If so, mark as a switch and break the loop:
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+            }
+            if (shouldSwitch) {
+                /* If a switch has been marked, make the switch
+                and mark that a switch has been done: */
+                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                switching = true;
+                // Each time a switch is done, increase this count by 1:
+                switchcount++;
+            } else {
+                /* If no switching has been done AND the direction is "asc",
+                set the direction to "desc" and run the while loop again. */
+                if (switchcount == 0 && dir == "asc") {
+                    dir = "desc";
+                    switching = true;
+                }
+            }
+        }
+    }
+</script>
 {% endblock %}
-    
