--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -2,8 +2,6 @@
 
 {% block head %}
 <script type="text/python" src="../app.py"></script>
-<!-- <script type="text/javascript" src="js/progress.js"></script> -->
-<script type="text/javascript" src="static/css_image/progress.js"></script>
 {% endblock %}
 
 {% block nav %}
@@ -18,16 +16,14 @@
 <h3>Progress:</h3>
 <br>
 <br>
-<h3 id=progrss>0%</h3>
-<!-- <div class="progress" role="progressbar" tabindex="0" aria-valuenow={{progr}} aria-valuemin="0" aria-valuetext="{{progr}} percent" aria-valuemax="100">
-    <div class="progress-meter" style="width: 50%"></div>
-</div> -->
+<h3 id="progrss">0%</h3>
+<div id="progrsss" class="progress"></div>
 <br>
 <br>
 <br>
 <br>
 <form action="/reports" method="POST" target="_blank">
-    <button type="submit" class="btnOpenReport btn btn-primary">Click here to go to your reports</button>
+    <button id="reportsbutton" type="submit" class="btnOpenReport btn btn-primary">Click here to go to your reports</button>
 </form>
 <br>
 <br>
@@ -35,4 +31,5 @@
     <input type="hidden" value="{{targetname}}" name="targetname">
     <button type="submit" class="btnPortQuestions btn btn-primary">Click here to answer the port questions to improve the security of target {{targetname}}!</button>
 </form>
+<script type="text/javascript" src="static/css_image/progress.js"></script>
 {% endblock %}
