--- a/flask/templates/config.html
+++ b/flask/templates/config.html
@@ -14,6 +14,11 @@
 <div class="row">
     <h3>Static configuration</h3>
 </div>
+
+<div>
+    <p>current ip address: {{ip}}</p>
+    <p>current subnetmask: {{subnet}}</p>
+</div>
 <div class="row">
     <p><i>Enter a valid IP address and a subnetmask to configure your own address staticly</i></p>
 </div>
