--- a/flask/templates/success.html
+++ b/flask/templates/success.html
@@ -11,7 +11,8 @@
 {% endblock %}
 
 {% block body %}
-<h1>Success, your scan has started</h1>
+<!-- <h1>Success, your scan has started</h1> -->
+<h1>{{msg}}</h1>
 <br>
 <h3>Progress:</h3>
 <br>
